# The-Land-of-Boars

./: CMakeLists.txt  LICENSE.txt  README.md  Window.cpp  Window.h  main.cpp
Entities/: GameObject.cpp  GameObject.h  Monster.cpp  Monster.h  PhysicsConstants.h  Platform.cpp  Platform.h  Player.cpp  Player.h
Entities/Monsters/: Boar.cpp  Boar.h  Monster.cpp  Monster.h
Entities/Objects/: Platform.cpp  Platform.h  Tile.cpp
Entities/Player/: Player.cpp  Player.h
Events/: PlayerInput.cpp  PlayerInput.h
Game/: GameManager.cpp  GameManager.h  GameStateManager.cpp  LevelScene.cpp  LevelScene.h  Scene.cpp  Scene.h  main.cpp
Game/include/: Boar.h  GameStateManager.h  Level.h  LevelOne.h  Monster.h  Platform.h  Scene.h  Tile.h
Game/include/Entities/: PhysicsConstants.h
Game/include/Entities/Monsters/: Boar.h  Monster.h
Game/include/Entities/Objects/: Tile.h
Game/include/Entities/Player/: Player.h
Game/include/Level/: Level.h  LevelOne.h  Scene.h
Game/include/Management/: TileManager.h
Game/include/Monsters/: Boar.h  Monster.h
Game/include/Objects/: Platform.h  Tile.h
Game/include/Player/: Player.h
Game/src/Entities/: GameObject.cpp
Game/src/Entities/Monsters/: Boar.cpp  Monster.cpp
Game/src/Entities/Objects/: Platform.cpp  Tile.cpp
Game/src/Entities/Player/: Player.cpp  Player.h
Game/src/Level/: Level.cpp  LevelOne.cpp  Scene.cpp
Game/src/Management/: GameStateManager.cpp  TileManager.cpp
Game/src/Sprites/: Animation.cpp  TextureManager.cpp
Level/: Level.cpp  Level.h  LevelOne.cpp  LevelOne.h  LevelScene.cpp  LevelScene.h
Levels/: map_level_one.txt
Platform/core/: Engine.cpp  GameManager.cpp  Renderer.cpp  Scene.cpp  Window.cpp  main.cpp
Platform/include/: Engine.h  GameManager.h  Renderer.h  Scene.h
Renderer/: Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  TextureManager.h  Window.cpp  Window.h
Sprites/: Animation.cpp  Animation.h  TextureManager.cpp  TextureManager.h
include/Game/Entities/: CollisionHandler.h  GameObject.h  PhysicsConstants.h
include/Game/Entities/Effects/: ParticleCone.h
include/Game/Entities/Monsters/: Bee.h  Boar.h  Monster.h  Snail.h
include/Game/Entities/Objects/: Coin.h  MovingPlatform.h  Platform.h  Tile.h  Tree.h
include/Game/Entities/Player/: Player.h
include/Game/Entities/UI/: Button.h  PlayerUI.h
include/Game/Entities/uiElements/: HealthBar.h  StartButton.h
include/Game/Events/: Events.h  GameInputManager.h
include/Game/Events/Commands/: Command.h  EditorCommands.h  EngineCommands.h  PlayerCommands.h
include/Game/Events/Observers/: Observer.h  Subject.h
include/Game/Level/: Level.h  LevelEditor.h  LevelLoader.h  LevelOne.h
include/Game/Management/: GameInputManager.h  GameStateManager.h  InputManager.h  SoundManager.h  TileManager.h
include/Game/Sprites/: Animation.h  TextureManager.h
include/Platform/: DebugGUI.h  Engine.h  GUI.h  Globals.h  Renderer.h  Window.h
include/Platform/LevelEditor/: EditorInputManager.h  Grid.h  LevelEditor.h
include/Utilities/: Random.h  Thread.h
src/Game/Entities/: CollisionHandler.cpp  GameObject.cpp
src/Game/Entities/Effects/: ParticleCone.cpp
src/Game/Entities/Events/: GameInputManager.cpp
src/Game/Entities/Monsters/: Bee.cpp  Boar.cpp  Monster.cpp  Snail.cpp
src/Game/Entities/Objects/: Coin.cpp  MovingPlatform.cpp  Platform.cpp  Tile.cpp  Tree.cpp
src/Game/Entities/Player/: Player.cpp
src/Game/Entities/UI/: Button.cpp  PlayerUI.cpp
src/Game/Entities/uiElements/: HealthBar.cpp  PlayerUI.cpp  StartButton.cpp
src/Game/Events/: GameInputManager.cpp
src/Game/Events/Commands/: Command.cpp  EditorCommands.cpp  EngineCommands.cpp  PlayerCommands.cpp
src/Game/Events/Observers/: Observer.cpp  Subject.cpp
src/Game/Level/: Level.cpp  LevelEditor.cpp  LevelLoader.cpp  LevelOne.cpp
src/Game/Management/: GameInputManager.cpp  GameStateManager.cpp  InputManager.cpp  SoundManager.cpp  TileManager.cpp
src/Game/Sprites/: Animation.cpp  TextureManager.cpp
src/Platform/: DebugGUI.cpp  Engine.cpp  GUI.cpp  Renderer.cpp  Settings.cpp  Window.cpp  main.cpp
src/Platform/LevelEditor/: EditorInputManager.cpp  Grid.cpp  LevelEditor.cpp
src/Utilities/: Random.cpp
